feat: agregar nuevas interfaces y mejorar manejo de imágenes y usuarios en servicios y controladores
